<resources>
    <string name="app_name" translatable="false">ScheduleCalendar</string>
    <string name="download">Download</string>
    <string name="password">Password</string>
    <string name="album_number">Album number</string>
    <string name="today">Today</string>
    <string name="no_lessons">No lessons</string>
    <string name="lesson_cancelled">Cancelled</string>
    <string name="lesson_exam">Exam</string>
    <string name="error_no_internet">No Internet connection</string>
    <string name="error_field_cannot_be_empty">Field cannot be empty</string>
    <string name="error_album_number_not_found">Given album number not exists</string>
    <string name="error_empty_schedule">Schedule for given queries is empty</string>
    <string name="error_service_database_update">Server database is updating, try again within few minutes</string>
    <string name="error_service_internal">Internal server error, try again within few minutes</string>
    <string name="error_service_unrecognized">Unrecognized error, try again within few minutes</string>
    <string name="teacher_name">Teacher name</string>
    <string name="teacher_surname">Teacher surname</string>
    <string name="faculty">Faculty</string>
    <string name="subject">Subject</string>
    <string name="room">Room</string>
    <string name="field_of_study">Field of study</string>
    <string name="semester">Semester</string>
    <string name="form">Form</string>
    <string name="course_type">Course type</string>
    <string name="date_from">Date from</string>
    <string name="date_to">Date to</string>
    <string name="activity_search_label">Search schedule</string>
    <string-array name="form_entries">
        <item>part-time</item>
        <item>full-time</item>
    </string-array>
    <string-array name="course_type_entries">
        <item>lecture</item>
        <item>auditorium</item>
        <item>laboratory</item>
        <item>project</item>
        <item>language course</item>
    </string-array>
    <string-array name="semester_entries" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
