<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.edu.zut.mad.schedule.search.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/teacherNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/teacherNameInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teacher_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/teacherSurnameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/search_input_padding">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/teacherSurnameInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teacher_surname"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/facultyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingTop="@dimen/search_input_padding">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/facultyAbbreviationInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faculty" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/roomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingTop="@dimen/search_input_padding">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/roomInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/room" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/subjectLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingTop="@dimen/search_input_padding">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/subjectInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fieldOfStudyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingTop="@dimen/search_input_padding">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fieldOfStudyInputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filed_of_study" />
        </android.support.design.widget.TextInputLayout>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/semesterSpinnerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/semester_entries"
            android:paddingTop="@dimen/search_input_padding"
            app:ms_hint="@string/semester" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/formSpinnerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/form_entries"
            android:paddingTop="@dimen/search_input_padding"
            app:ms_alignLabels="true"
            app:ms_hint="@string/form" />

        <TextView
            android:id="@+id/dateFromView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_date_black_24dp"
            android:paddingTop="@dimen/search_input_padding"
            tools:text="21-11-2017" />

        <TextView
            android:id="@+id/dateToView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_date_black_24dp"
            android:paddingTop="@dimen/search_input_padding"
            tools:text="28-11-2017" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@android:string/search_go" />

    </LinearLayout>

</ScrollView>
